fixed EBrowser not shown correctly, improved error behaviour
o [fixed] swt composites like browser not shown in screen
o [fixed] illegal shown scrollbars in browser
o [fixed] many empty catch blocks, which ignore exceptions
o [improved] some error loggings to give a more detailed feedback
o [remove] commented code
o [added] Screen::panelToScreen(int, int) and IScreen::isDisposed()
o [added] features to swt.TestPanel

--- a/src/de/tucottbus/kt/lcars/resources/LCARS.css
+++ b/src/de/tucottbus/kt/lcars/resources/LCARS.css
@@ -6,6 +6,7 @@ BODY
   font-family: Compacta LT Light, Swiss911 UCm BT, sans-serif;
   font-size: 20pt;
   text-transform: uppercase;
+  overflow:hidden;
 }
 P,TD,LI,I,B
 {
